Update python generator based on feedback.

--- a/AutoRest/Generators/Python/Python/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/EnumTemplate.cshtml
@@ -3,10 +3,12 @@
 @using Microsoft.Rest.Generator.Python.TemplateModels
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.EnumTemplateModel>
 @*header*@
+from enum import Enum
+@EmptyLine
 @{
   foreach (var enumType in @Model.EnumTypes)
   {
-@:class @(enumType.Name)(object)
+@:class @(enumType.Name)(Enum)
 @EmptyLine
     for (int i = 0; i < enumType.Values.Count; i++)
     {
