--- a/AutoRest/Generators/Python/Python/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/EnumTemplate.cshtml
@@ -2,11 +2,17 @@
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Python.TemplateModels
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.EnumTemplateModel>
+#--------------------------------------------------------------------------
+@Header("# ")
+#--------------------------------------------------------------------------
+@EmptyLine
 @*header*@
+from enum import Enum
+@EmptyLine
 @{
   foreach (var enumType in @Model.EnumTypes)
   {
-@:class @(enumType.Name)(object)
+@:class @(enumType.Name)(Enum)
 @EmptyLine
     for (int i = 0; i < enumType.Values.Count; i++)
     {
