--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupInitTemplate.cshtml
@@ -3,6 +3,10 @@
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.ServiceClientTemplateModel>
+#--------------------------------------------------------------------------
+@Header("# ")
+#--------------------------------------------------------------------------
+@EmptyLine
 @{
   if (Model.MethodGroupModels.Any())
   {
