--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
@@ -2,8 +2,12 @@
 @using Microsoft.Rest.Generator.Python.Templates
 @using System.Linq;
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.MethodGroupTemplateModel>
+#--------------------------------------------------------------------------
+@Header("# ")
+#--------------------------------------------------------------------------
+@EmptyLine
 import sys
-import urllib
+@EmptyLine
 @if (Model.ContainsDecimal)
 {
 @:from decimal import *
@@ -13,45 +17,49 @@ import urllib
 @:from datetime import *
 }
 @EmptyLine
-try:
-    from urlparse import urljoin
-@EmptyLine
-except ImportError:
-    from urllib.parse import urljoin
-@EmptyLine
-from runtime.msrest.serialization import Serialized, Deserialized
+from runtime.msrest.service_client import ServiceClient
+from runtime.msrest.serialization import Serializer, Deserializer
 from runtime.msrest.exceptions import (
     SerializationError,
     DeserializationError,
     TokenExpiredError,
-    ClientRequestException)
+    ClientRequestError)
+from runtime.msrest.paging import Paged
 @EmptyLine
-from runtime.msrestazure.azure_handlers import Paged, Polled
-@EmptyLine
-@*from ..batch_exception import BatchStatusError*@
-@EmptyLine
-from .. import models
-@EmptyLine
+@*from ..batch_exception import BatchStatusError, @EmptyLine*@
 from ..models import *
 @EmptyLine
 class @(Model.MethodGroupType)(object):
 @EmptyLine
-    def __init__(self, client, config):
+    def __init__(self, client, config, serializer, derserializer):
 @EmptyLine
         self._client = client
-        self._config = config
-        self._classes = {k:v for k,v in models.__dict__.items() if isinstance(v, type)}
+        self._serialize = serializer
+        self._deserialize = derserializer
 @EmptyLine
-    def _send(self, request, accept_status, headers, content=None):
+        self.config = config
+@EmptyLine
+    def _verify_response(self, response, accept_status, error):
+@EmptyLine
+        if response.status_code not in accept_status:
+            deserialized = self._deserialize(
+                error, response)
+@EmptyLine
+            raise deserialized
+@EmptyLine
+    def _parse_url(self, name, value, datatype):
 @EmptyLine
         try:
-            request.add_headers(headers)
-            if content:
-                request.add_content(content)
+            value = self._serialize.serialize_data(value, str(datatype))
 @EmptyLine
-            response =  self._client.send(request)
+        except ValueError:
+            raise ValueError("{} must not be None.".format(name))
 @EmptyLine
-            return response
+        except DeserializationError:
+            raise TypeError("{} must be type {}.".format(name, datatype))
+@EmptyLine
+        else:
+            return value
 @EmptyLine
 @foreach (var method in Model.MethodTemplateModels)
 {
