--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
@@ -3,10 +3,12 @@
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.ServiceClientTemplateModel>
-from runtime.msrestazure import AzureConfiguration
-from runtime.msrestazure.aad import (
-    UserPassCredentials,
-    InteractiveCredentials,
-    ServicePrincipalCredentials)
+#--------------------------------------------------------------------------
+@Header("# ")
+#--------------------------------------------------------------------------
 @EmptyLine
-from .@(Model.Name.ToPythonCase()) import @(Model.Name)
+from runtime.msrest import Configuration
+from runtime.msrest.exceptions import *
+@EmptyLine
+from .@(Model.Name.ToPythonCase()) import @(Model.Name), @(Model.Name)Configuration
+
