--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -3,7 +3,10 @@
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.ServiceClientTemplateModel>
-import urllib
+#--------------------------------------------------------------------------
+@Header("# ")
+#--------------------------------------------------------------------------
+@EmptyLine
 @if (Model.ContainsDecimal)
 {
 @:from decimal import *
@@ -14,6 +17,13 @@ import urllib
 }
 @EmptyLine
 from runtime.msrest import ServiceClient, Configuration
+from runtime.msrest import Serializer, Deserializer
+from runtime.msrest.exceptions import (
+    SerializationError,
+    DeserializationError,
+    TokenExpiredError,
+    ClientRequestError)
+from runtime.msrest.paging import Paged
 @{
   if (Model.MethodGroupModels.Any())
   {
@@ -23,11 +33,12 @@ from runtime.msrest import ServiceClient, Configuration
     }
   }
 }
-from .models import *
+import models
 @EmptyLine
 class @(Model.Name)Configuration(Configuration):
 @EmptyLine
-    def __init__(self, base_url=None, filepath=None, @(Model.RequiredConstructorParameters)):
+    def __init__(self, base_url=None, filepath=None):
+@*(Model.RequiredConstructorParameters)*@
 @EmptyLine
          if (not base_url):
              base_url = '@Model.BaseUrl'
@@ -38,31 +49,46 @@ class @(Model.Name)Configuration(Configuration):
 *@
 @EmptyLine
 @EmptyLine
-class @(Model.Name)(ServiceClient):
+class @(Model.Name)(object):
 @EmptyLine
-    def __init__(self, credentials, config=Configuration()):
+    def __init__(self, credentials, config):
 @EmptyLine
-        super(@(Model.Name), self).__init__(credentials, config)
+        self._client = ServiceClient(credentials, config) 
 @EmptyLine
+        client_models = {k:v for k,v in models.__dict__.items() if isinstance(v, type)}
+        self._serialize = Serializer()
+        self._deserialize = Deserializer(client_models)
+@EmptyLine
+        self.config = config
   @foreach (var methodGroup in Model.MethodGroupModels)
   {
-        @:self.@(methodGroup.MethodGroupName) = @(methodGroup.MethodGroupType)(self, config)
+        @:self.@(methodGroup.MethodGroupName) = @(methodGroup.MethodGroupType)(self._client, self.config, self._serialize, self._deserialize)
   }
 @EmptyLine
 @if (Model.MethodTemplateModels.Any())
 {
 <text>
+    def _verify_response(self, response, accept_status, error):
 @EmptyLine
-    def _send(self, request, accept_status, headers, content=None):
+        if response.status_code not in accept_status:
+            deserialized = self._deserialize(
+                error, response)
+@EmptyLine
+            raise deserialized
+@EmptyLine
+    def _parse_url(self, name, value, datatype):
 @EmptyLine
         try:
-            request.add_headers(headers)
-            if content:
-                request.add_content(content)
+            value = self._serialize.serialize_data(value, str(datatype))
 @EmptyLine
-            response =  self._client.send(request)
+        except ValueError:
+            raise ValueError("{} must not be None.".format(name))
 @EmptyLine
-            return response
+        except DeserializationError:
+            raise TypeError("{} must be type {}.".format(name, datatype))
+@EmptyLine
+        else:
+            return value
 @EmptyLine
 </text>
   foreach (var method in Model.MethodTemplateModels)
