--- a/AutoRest/Generators/Java/Java/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/MethodTemplate.cshtml
@@ -36,6 +36,14 @@ public ServiceResponse<@Model.GenericReturnTypeString> @(Model.Name)(@Model.Meth
 {
 @:    Validator.validate(@(param.Name));
 }
+@foreach (var transformation in Model.InputParameterTransformation)
+{
+    var outType = transformation.OutputParameter.Type.Name;
+    var outProp = transformation.OutputParameter.Name;
+    var inParam = transformation.ParameterMappings[0].InputParameter.Name;
+    var inProp = transformation.ParameterMappings[0].InputParameterProperty;
+@:    @outType @outProp = @(inParam).get@(inProp.ToPascalCase())();
+}
     try {
         Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterInvocation);
         return @(Model.Name)Delegate(call.execute(), null);
@@ -68,11 +76,20 @@ public Call<@Model.CallType> @(Model.Name)Async(@Model.MethodParameterDeclaratio
 @:    if (@param.Name == null) {
 @:        serviceCallback.failure(new ServiceException(
 @:            new IllegalArgumentException("Parameter @param.Name is required and cannot be null.")));
+@:        return null;
 @:    }
 }
 @foreach (var param in Model.ParametersToValidate)
 {
 @:    Validator.validate(@(param.Name), serviceCallback);
+}
+@foreach (var transformation in Model.InputParameterTransformation)
+{
+    var outType = transformation.OutputParameter.Type.Name;
+    var outProp = transformation.OutputParameter.Name;
+    var inParam = transformation.ParameterMappings[0].InputParameter.Name;
+    var inProp = transformation.ParameterMappings[0].InputParameterProperty;
+@:    @outType @outProp = @(inParam).get@(inProp.ToPascalCase())();
 }
     Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterInvocation);
     call.enqueue(new @Model.InternalCallback<@(JavaCodeNamer.WrapPrimitiveType(Model.ReturnType).Name)>(serviceCallback) {
