Add default header to generated files.

--- a/AutoRest/Generators/Python/Python/Templates/EnumTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/EnumTemplate.cshtml
@@ -2,6 +2,10 @@
 @using Microsoft.Rest.Generator.ClientModel
 @using Microsoft.Rest.Generator.Python.TemplateModels
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.EnumTemplateModel>
+#--------------------------------------------------------------------------
+@Header("# ")
+#--------------------------------------------------------------------------
+@EmptyLine
 @*header*@
 from enum import Enum
 @EmptyLine
