--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
@@ -2,6 +2,10 @@
 @using Microsoft.Rest.Generator.Python.Templates
 @using System.Linq;
 @inherits Microsoft.Rest.Generator.Template<Microsoft.Rest.Generator.Python.MethodGroupTemplateModel>
+#--------------------------------------------------------------------------
+@Header("# ")
+#--------------------------------------------------------------------------
+@EmptyLine
 import sys
 @EmptyLine
 @if (Model.ContainsDecimal)
