Update python code generator.

--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientInitTemplate.cshtml
@@ -8,6 +8,7 @@
 #--------------------------------------------------------------------------
 @EmptyLine
 from runtime.msrest import Configuration
+from runtime.msrest.exceptions import *
 @EmptyLine
 from .@(Model.Name.ToPythonCase()) import @(Model.Name), @(Model.Name)Configuration
 
