--- a/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelInitTemplate.cshtml
@@ -12,7 +12,7 @@
   {
     foreach (var modelType in Model.ServiceClient.ModelTypes)
     {
-@:from .@(modelType.Name.ToPythonCase()) import @modelType.Name
+@:from .@(modelType.Name.ToPythonCase()) import @modelType.Name@Model.GetExceptionNameIfExist(modelType)
     }
   }
 
