--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
@@ -17,14 +17,15 @@ import sys
 @:from datetime import *
 }
 @EmptyLine
-from runtime.msrest.service_client import ServiceClient
-from runtime.msrest.serialization import Serializer, Deserializer
-from runtime.msrest.exceptions import (
+from msrest.service_client import ServiceClient
+from msrest.serialization import Serializer, Deserializer
+from msrest.exceptions import (
     SerializationError,
     DeserializationError,
     TokenExpiredError,
-    ClientRequestError)
-from runtime.msrest.paging import Paged
+    ClientRequestError,
+    ServerError)
+from msrest.paging import Paged
 @EmptyLine
 @*from ..batch_exception import BatchStatusError, @EmptyLine*@
 from ..models import *
@@ -38,14 +39,6 @@ class @(Model.MethodGroupType)(object):
         self._deserialize = derserializer
 @EmptyLine
         self.config = config
-@EmptyLine
-    def _verify_response(self, response, accept_status, error):
-@EmptyLine
-        if response.status_code not in accept_status:
-            deserialized = self._deserialize(
-                error, response)
-@EmptyLine
-            raise deserialized
 @EmptyLine
     def _parse_url(self, name, value, datatype):
 @EmptyLine
