Change the base exception to HttpOperationError.

--- a/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/MethodGroupTemplate.cshtml
@@ -24,7 +24,7 @@ from msrest.exceptions import (
     DeserializationError,
     TokenExpiredError,
     ClientRequestError,
-    ServerError)
+    HttpOperationError)
 @EmptyLine
 @*from ..batch_exception import BatchStatusError, @EmptyLine*@
 from ..models import *
