--- a/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ServiceClientTemplate.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Rest.Generator.Python
+﻿@using Microsoft.Rest.Generator.ClientModel
+@using Microsoft.Rest.Generator.Python
 @using Microsoft.Rest.Generator.Python.Templates
 @using Microsoft.Rest.Generator.Utilities
 @using System.Linq
@@ -37,13 +38,19 @@ import models
 @EmptyLine
 class @(Model.Name)Configuration(Configuration):
 @EmptyLine
-    def __init__(self, base_url=None, filepath=None):
+    def __init__(self, @(Model.RequiredConstructorParameters)base_url=None, filepath=None):
 @*(Model.RequiredConstructorParameters)*@
 @EmptyLine
         if not base_url:
             base_url = '@Model.BaseUrl'
 @EmptyLine
-        super(@(Model.Name)Configuration, self).__init__(base_url, filepath)
+@{var parameters = Model.Properties.Where(p => p.IsRequired);}
+        super(@(Model.Name)Configuration, self).__init__(@(parameters.Any(p => p.Type == PrimaryType.Credentials) ? "credentials" : "None"), base_url, filepath)
+@EmptyLine
+@foreach (var param in parameters)
+{
+        @:self.@(param.Name) = @(param.Name);
+}
 @*EmptyLine
         self.api_version = '2015-06-01.2.0'
 *@
@@ -51,9 +58,9 @@ class @(Model.Name)Configuration(Configuration):
 @EmptyLine
 class @(Model.Name)(object):
 @EmptyLine
-    def __init__(self, credentials, config):
+    def __init__(self, config):
 @EmptyLine
-        self._client = ServiceClient(credentials, config) 
+        self._client = ServiceClient(config) 
 @EmptyLine
         client_models = {k:v for k,v in models.__dict__.items() if isinstance(v, type)}
         self._serialize = Serializer()
